// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render code 1`] = `
<td
  className="source-line-code code has-issues"
  data-line-number={16}
>
  <div
    className="source-line-code-inner"
  >
    <pre>
      <span
        className="k source-line-code-issue"
        key="0"
      >
        impor
      </span>
      <span
        className="k"
        key="1"
      >
        t
      </span>
      <span
        className=""
        key="2"
      >
         java.util.
      </span>
      <span
        className="sym-9 sym highlighted"
        key="3"
      >
        ArrayList
      </span>
      <span
        className=""
        key="4"
      >
        ;
      </span>
    </pre>
  </div>
  <LineIssuesList
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": false,
        "name": "branch-6.7",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "issue-1",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "issue-2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    onIssueChange={[MockFunction]}
    onIssueClick={[MockFunction]}
    onIssuePopupToggle={[MockFunction]}
    selectedIssue="issue-1"
  />
</td>
`;

exports[`render code: with additional child 1`] = `
<td
  className="source-line-code code has-issues"
  data-line-number={16}
>
  <div
    className="source-line-code-inner"
  >
    <pre>
      <span
        className="k source-line-code-issue"
        key="0"
      >
        impor
      </span>
      <span
        className="k"
        key="1"
      >
        t
      </span>
      <span
        className=""
        key="2"
      >
         java.util.
      </span>
      <span
        className="sym-9 sym highlighted"
        key="3"
      >
        ArrayList
      </span>
      <span
        className=""
        key="4"
      >
        ;
      </span>
    </pre>
  </div>
  <LineIssuesList
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": false,
        "name": "branch-6.7",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "issue-1",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "issue-2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    onIssueChange={[MockFunction]}
    onIssueClick={[MockFunction]}
    onIssuePopupToggle={[MockFunction]}
    selectedIssue="issue-1"
  />
  <div>
    additional child
  </div>
</td>
`;

exports[`render code: with secondary location 1`] = `
<td
  className="source-line-code code has-issues"
  data-line-number={16}
>
  <div
    className="source-line-code-inner"
  >
    <pre>
      <span
        className="k source-line-code-issue"
        key="0"
      >
        impor
      </span>
      <Tooltip
        key="marker-1"
        overlay="secondary-location-msg"
        placement="top"
      >
        <LocationIndex
          aria-label="2-secondary-location-msg"
          leading={false}
          onClick={[Function]}
          selected={false}
        >
          <span>
            2
          </span>
        </LocationIndex>
      </Tooltip>
      <span
        className="k issue-location"
        key="1"
      >
        t
      </span>
      <span
        className=""
        key="2"
      >
         java.util.
      </span>
      <span
        className="sym-9 sym highlighted"
        key="3"
      >
        ArrayList
      </span>
      <span
        className=""
        key="4"
      >
        ;
      </span>
    </pre>
  </div>
  <LineIssuesList
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": false,
        "name": "branch-6.7",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "issue-1",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "issue-2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    onIssueChange={[MockFunction]}
    onIssueClick={[MockFunction]}
    onIssuePopupToggle={[MockFunction]}
    selectedIssue="issue-1"
  />
</td>
`;
